--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lease-calculator",
 	"version": "0.1.0",
 	"private": true,
-	"packageManager": "pnpm@10.10.0",
+	"packageManager": "pnpm@10.11.0",
 	"scripts": {
 		"build": "next build",
 		"vercel-build": "prisma migrate deploy && next build",
@@ -20,7 +20,7 @@
 	"dependencies": {
 		"@auth/prisma-adapter": "2.9.1",
 		"@hookform/resolvers": "5.0.1",
-		"@prisma/client": "6.7.0",
+		"@prisma/client": "6.8.2",
 		"@radix-ui/react-alert-dialog": "1.1.14",
 		"@radix-ui/react-dialog": "1.1.14",
 		"@radix-ui/react-dropdown-menu": "2.1.15",
@@ -30,7 +30,7 @@
 		"@radix-ui/react-separator": "1.1.7",
 		"@radix-ui/react-slot": "1.2.3",
 		"@t3-oss/env-nextjs": "0.13.4",
-		"@tanstack/react-query": "5.75.7",
+		"@tanstack/react-query": "5.76.2",
 		"@trpc/client": "11.1.2",
 		"@trpc/react-query": "11.1.2",
 		"@trpc/server": "11.1.2",
@@ -49,7 +49,7 @@
 		"superjson": "2.2.2",
 		"tailwind-merge": "3.3.0",
 		"tailwindcss-animate": "1.0.7",
-		"zod": "3.24.4"
+		"zod": "3.25.23"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -59,11 +59,11 @@
 		"@testing-library/react": "16.3.0",
 		"@types/react": "19.1.5",
 		"@types/react-dom": "19.1.5",
-		"@vitejs/plugin-react": "4.4.1",
+		"@vitejs/plugin-react": "4.5.0",
 		"jsdom": "26.1.0",
 		"mockdate": "3.0.5",
 		"postcss": "8.5.3",
-		"prisma": "6.7.0",
+		"prisma": "6.8.2",
 		"tailwindcss": "4.1.7",
 		"tsx": "4.19.4",
 		"typescript": "5.8.3",
@@ -81,6 +81,7 @@
 			"@biomejs/biome",
 			"@prisma/client",
 			"@prisma/engines",
+			"@tailwindcss/oxide",
 			"esbuild",
 			"prisma",
 			"sharp"
