--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,7 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.mjs"
-# should be updated accordingly.
-
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
+BETTER_AUTH_SECRET="my-auth-secret"
+CRON_SECRET="my-cron-secret"
 DATABASE_URL="postgresql://localhost/lease-calculator"
-
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET=""
-
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
-AUTH_GITHUB_ID=""
-AUTH_GITHUB_SECRET=""
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
